methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:21: error: not found: value setColuleurBrosse
  setColuleurBrosse(Color.YELLOW);
  ^